--- a/fin.css
+++ b/fin.css
@@ -8,8 +8,10 @@ body {
     background-color: #F7EFE3;
     margin: 0;
     padding: 0;
-    height: 100vh;
-    display: flex;
+    min-height: 100vh;
+    width: 100vw;
+    box-sizing: border-box;
+    /* Remove display: flex from body to avoid layout issues */
 }
 
 .sidebar {
@@ -490,6 +492,8 @@ a {
     padding: 20px;
     padding-left: 80px;
     text-align: left;
+    /* Prevent text from overflowing on small screens */
+    word-break: break-word;
 }
 
 .savetopdfBtn {
@@ -530,9 +534,17 @@ a {
         grid-template-columns: 1fr;
         width: 98vw;
     }
-
     .dashboard-container {
         margin-top: 10px;
+    }
+    .ledgerDisplay {
+        width: 98vw;
+        min-width: unset;
+        padding: 0 2vw;
+    }
+    .ledgerDetails {
+        padding-left: 10px;
+        padding-right: 10px;
     }
 }
 
